--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
+    "lucide-react": "^0.542.0",
     "mongoose": "^8.18.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
